# llm-cost-benchmark-2026

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
analysis/: 01_lever_matrix.py  02_cost_quality_scatter.py  03_category_breakdown.py  04_headlines.py  05_chart_cost_quality.py  06_chart_category_heatmap.py  07_chart_reasoning_drilldown.py  08_chart_cost_sensitivity.py
data/: dryrun_results.db  phase_log_dryrun.jsonl  results.db  schema.sql
docs/: PRD.md  PROMPT_REVISIONS.md  day_13_kickoff.md  testing_strategy.md
docs/methodology/: prompt_design_decisions.md
docs/writeup/: v1.md
prompts/: customer_support.json  extraction.json  rag_qa.json  reasoning.json  summarisation.json
runners/: _base.py  budget.py  lever_batch.py  lever_caching.py  lever_compression.py  lever_output_cap.py  orchestrator.py  run_anthropic.py  run_openai.py  schema.py
scoring/: __init__.py  arbitrate.py  disagreement.py  disagreements.csv  judge.py  tier_1.py
scripts/: compute_openai_compression_ratio.py  day_10.py  day_10_dryrun.py  day_11_opus_reasoning_backfill.py  day_12_populate_canonical.py  day_6_dry_run.py  day_6_resume.py  day_7.py  day_8.py  day_9_backfill.py  day_9_dryrun.py
tests/: conftest.py  test_arbitrate.py  test_judge.py  test_orchestrator.py  test_run_anthropic.py  test_runner_invariants.py  test_tier_1_scoring.py
